REOPENED173909
Incorrect behavior of "cursor: auto" over links
https://bugs.webkit.org/show_bug.cgi?id=173909
Summary Incorrect behavior of "cursor: auto" over links
Florian Rivoal
Reported 2017-06-28 00:01:32 PDT
The "auto" behavior of the "cursor" property used to be only vaguely defined, but to improve interoperability, the latest specification is more clear: > auto behaves as 'text' over text, and 'default' otherwise. Other expected effects, such as the "pointer" cursor over links should be achieved using the UA stylesheet, rather than through the magic behavior of the "auto" value. Webkit uses "auto" rather than the UA stylesheet to adjust the cursor, which causes the following tests to fail: https://test.csswg.org/harness/test/css-ui-3_dev/single/cursor-auto-002/format/html5/ https://test.csswg.org/harness/test/css-ui-3_dev/single/cursor-auto-003/format/html5/
Attachments
Radar WebKit Bug Importer
Comment 1 2017-06-29 08:12:56 PDT
Florian Rivoal
Comment 2 2017-09-20 23:48:25 PDT
This is now being fixed in Chrome, it would be good if Webkit fixed it as well. See https://bugs.chromium.org/p/chromium/issues/detail?id=737452
Ahmad Saleem
Comment 3 2022-08-07 14:02:31 PDT
Webkit is missing following patch change to HTML.css file: https://github.com/WebKit/WebKit/blob/main/Source/WebCore/css/html.css#L1289 Commit - https://chromium.googlesource.com/chromium/src.git/+/902ef4e53edcb011944f0f7cc3cd9a7d43b21759 While I was not able to find this change 1:1 since code has changed a lot: https://chromium.googlesource.com/chromium/src.git/+/74ef53b06b1e1f1e775371296c3457f54a2b9eba%5E%21/#F0 This was earliest of the patch - https://chromium.googlesource.com/chromium/src.git/+/53a46aede88dac4189a493f1e6eb30868aa17929 I am not sure whether it is fixed or not but I can see that there are some difference in current Webkit code (especially html.css). I would leave it to someone else to confirm whether it is something yet to fix or not. Thanks!
Vitor Roriz
Comment 4 2022-08-10 14:14:13 PDT
EWS
Comment 5 2022-08-23 09:12:39 PDT
Committed 253685@main (3a4722baf048): <https://commits.webkit.org/253685@main> Reviewed commits have been landed. Closing PR #3195 and removing active labels.
Brent Fulgham
Comment 6 2022-09-02 10:46:36 PDT
This change had to be reverted due to it introducing a problem with Amazon Prime Video controls. Reverted in commit 253823@main (543df0e3b8cc): <https://commits.webkit.org/253823@main>
Brent Fulgham
Comment 7 2022-09-02 10:46:56 PDT
This will now be tracked under a new radar: <rdar://99495893>
Vitor Roriz
Comment 8 2022-09-09 06:19:00 PDT
Vitor Roriz
Comment 9 2022-09-14 08:42:24 PDT
EWS
Comment 10 2022-09-14 09:54:36 PDT
Committed 254480@main (2ef8bf040a9d): <https://commits.webkit.org/254480@main> Reviewed commits have been landed. Closing PR #4348 and removing active labels.
Ahmad Saleem
Comment 11 2022-11-06 05:26:05 PST
Reopening after checking with vitorroriz on GitHub.
Note You need to log in before you can comment on or make changes to this bug.