Incorrect behavior of "cursor: auto" over links https://bugs.webkit.org/show_bug.cgi?id=173909 rdar://33054544

Reviewed by Simon Fraser.

* LayoutTests/imported/w3c/web-platform-tests/html/rendering/the-css-user-agent-style-sheet-and-presentational-hints/mouse-cursor-imagemap-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/rendering/the-css-user-agent-style-sheet-and-presentational-hints/no-help-cursor-on-links.historical-expected.txt:
* Source/WebCore/css/html.css:
hand cursor (pointer) should not be rendered through 'auto' behavior of agent.
(a:any-link):
(a:any-link:read-write):
(area:any-link):
* Source/WebCore/page/EventHandler.cpp:
Removing hand cursor calculation from 'auto' case. Auto should just result in default or text cursors.
We are now using computedStyle instead of renderer->style() because we still need to access style
for elements without a renderer, like <area>.
(WebCore::EventHandler::updateCursor):
(WebCore::EventHandler::selectCursor):
(WebCore::EventHandler::handleMouseMoveEvent):
* Source/WebCore/page/EventHandler.h:
Since we don't handle hand cursor anymore on selectCursor, selectCursor and updateCursor
no longer need to receive shiftKey.

Canonical link: https://commits.webkit.org/253685@main